Implement Rest API for Customers and Stores(Hanna Bernyk) Swagger configuration(Hanna Bernyk) Security User configuration(Oladotun Akinlabi)
